JUDDI-546 fixing issues with the JUDDI_API
git-svn-id: https://svn.apache.org/repos/asf/juddi/trunk@1517708 13f79535-47bb-0310-9956-ffa450edef68